--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dependencies": {
         "irc"       : ">=0.2.0",
         "underscore": ">=1.1.6",
-        "express"   :">=2.3.11",
-        "winston"   :">=0.3.1"
+        "express"   : ">=2.3.11",
+        "winston"   : ">=0.3.1",
+        "node.io"   : ">=0.3.1"
     }
 }
