--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "underscore": ">=1.1.6",
         "express"   : ">=2.3.11",
         "winston"   : ">=0.3.1",
-        "node.io"   : ">=0.3.1"
+        "node.io"   : ">=0.3.1",
+        "xml2js"    : ">=0.1.8"
     }
 }
